<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="app_1">Spotify Streamer</string>
    <string name="app_2">Compass</string>
    <string name="app_3">Elisa Kirja</string>
    <string name="app_4">Sports Tracker</string>
    <string name="app_5">WeChat</string>
</resources>
