<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/header"
        android:text="@string/header"/>
    <Button
        android:id="@+id/app1"
        style="@style/app"
        android:onClick="launchApp"
        android:text="@string/app_1"/>
    <Button
        android:id="@+id/app2"
        style="@style/app"
        android:onClick="launchApp"
        android:text="@string/app_2"/>
    <Button
        android:id="@+id/app3"
        style="@style/app"
        android:onClick="launchApp"
        android:text="@string/app_3"/>
    <Button
        android:id="@+id/app4"
        style="@style/app"
        android:onClick="launchApp"
        android:text="@string/app_4"/>
    <Button
        android:id="@+id/app5"
        style="@style/app"
        android:onClick="launchApp"
        android:text="@string/app_5"/>

</LinearLayout>
